fin de la fonctionaliter generer raports dans un fichier pdf